crates/backyard-lexer/tests/snapshots/string__basic.snap
---
source: crates/backyard-lexer/tests/string.rs
expression: tokens
snapshot_kind: text
---
- token_type: String
  value:
    - 34
    - 116
    - 101
    - 115
    - 116
    - 34
  line: 1
  column: 0
  offset: 0
