crates/backyard-lexer/tests/snapshots/string__escaped_advance.snap
---
source: crates/backyard-lexer/tests/string.rs
expression: tokens
snapshot_kind: text
---
- token_type: EncapsedStringOpen
  value:
    - 34
  line: 1
  column: 0
  offset: 0
- token_type: EncapsedString
  value:
    - 116
    - 101
    - 115
    - 116
    - 32
    - 92
    - 123
  line: 1
  column: 1
  offset: 1
- token_type: Variable
  value:
    - 97
  line: 1
  column: 8
  offset: 8
- token_type: EncapsedString
  value:
    - 125
    - 32
  line: 1
  column: 10
  offset: 10
- token_type: EncapsedStringClose
  value:
    - 34
  line: 1
  column: 12
  offset: 12
