crates/backyard-lexer/tests/snapshots/string__escaped_var.snap
---
source: crates/backyard-lexer/tests/string.rs
expression: tokens
snapshot_kind: text
---
- token_type: String
  value: "\"test \\$a \""
  line: 1
  column: 0
  offset: 0
