crates/backyard-lexer/tests/snapshots/string__heredoc.snap
---
source: crates/backyard-lexer/tests/string.rs
expression: tokens
snapshot_kind: text
---
- token_type: HeredocOpen
  value: TEST
  line: 1
  column: 0
  offset: 0
- token_type: EncapsedString
  value: "\ntest "
  line: 1
  column: 7
  offset: 7
- token_type: Variable
  value: a
  line: 2
  column: 5
  offset: 13
- token_type: EncapsedString
  value: "\n"
  line: 2
  column: 7
  offset: 15
- token_type: HeredocClose
  value: TEST
  line: 3
  column: 3
  offset: 19
- token_type: Semicolon
  value: ;
  line: 3
  column: 4
  offset: 20
