crates/backyard-lexer/tests/snapshots/string__with_advance.snap
---
source: crates/backyard-lexer/tests/string.rs
expression: tokens
snapshot_kind: text
---
- token_type: EncapsedStringOpen
  value:
    - 34
  line: 1
  column: 0
  offset: 0
- token_type: EncapsedString
  value:
    - 116
    - 101
    - 115
    - 116
    - 32
  line: 1
  column: 1
  offset: 1
- token_type: AdvanceInterpolationOpen
  value:
    - 123
  line: 1
  column: 6
  offset: 6
- token_type: Variable
  value:
    - 97
  line: 1
  column: 7
  offset: 7
- token_type: AdvanceInterpolationClose
  value:
    - 125
  line: 1
  column: 9
  offset: 9
- token_type: EncapsedString
  value: []
  line: 1
  column: 10
  offset: 10
- token_type: EncapsedStringClose
  value:
    - 34
  line: 1
  column: 10
  offset: 10
