crates/backyard-lexer/tests/snapshots/string__with_variable.snap
---
source: crates/backyard-lexer/tests/string.rs
expression: tokens
snapshot_kind: text
---
- token_type: EncapsedStringOpen
  value:
    - 34
  line: 1
  column: 0
  offset: 0
- token_type: EncapsedString
  value:
    - 116
    - 101
    - 115
    - 116
    - 32
  line: 1
  column: 1
  offset: 1
- token_type: Variable
  value:
    - 97
  line: 1
  column: 6
  offset: 6
- token_type: EncapsedString
  value: []
  line: 1
  column: 8
  offset: 8
- token_type: EncapsedStringClose
  value:
    - 34
  line: 1
  column: 8
  offset: 8
